// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'category'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'category'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'category'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'category'
    Path:     event.schema.json#/required
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (1) match fails for invalid config -> Status event with unsupported property: Status event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (2) match fails for invalid config -> Status event with missing origin: Status event with missing origin 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (3) match fails for invalid config -> Status event with missing number: Status event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (4) match fails for invalid config -> Status event with wrong symbolicId: Status event with wrong symbolicId 1`] = `
"expect(received).toMatchSchema(schema)

received
  /details/symbolicId must be string
    Received: <number> 11
    Path:     event.schema.json#/properties/details/properties/symbolicId/type
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":11}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":11}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_STATUS_1
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (5) match fails for invalid config -> Syslog event with unsupported property: Syslog event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (6) match fails for invalid config -> Syslog event with missing origin: Syslog event with missing origin 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (7) match fails for invalid config -> Syslog event with missing number: Syslog event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'MSG'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'HEADER'
    Expected: <boolean> false
    Received: <object> {\\"MSG\\":\\"<MSG>\\",\\"HEADER\\":\\"<HEADER>\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (8) match fails for invalid config -> Syslog event with wrong details: Syslog event with wrong details 1`] = `
"expect(received).toMatchSchema(schema)

received
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_SYSLOG_0
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (9) match fails for invalid config -> NE107 event with unsupported property: NE107 event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (10) match fails for invalid config -> NE107 event with missing origin: NE107 event with missing origin 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (11) match fails for invalid config -> NE107 event with missing number: NE107 event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'diagnosticCode'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'location'
    Expected: <boolean> false
    Received: <object> {\\"diagnosticCode\\":\\"F-238\\",\\"location\\":\\"Floor 1\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (12) match fails for invalid config -> NE107 event with wrong details: NE107 event with wrong details 1`] = `
"expect(received).toMatchSchema(schema)

received
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'symbolicId'
    Expected: <boolean> false
    Received: <object> {\\"symbolicId\\":\\"Good\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_NE107_2
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (13) match fails for invalid config -> Generic event with unsupported property: Generic event with unsupported property 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must NOT have additional properties, but found 'unsupported'
    Expected: <boolean> false
    Path:     event.schema.json#/additionalProperties
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (14) match fails for invalid config -> Generic event with missing origin: Generic event with missing origin 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'origin'
    Path:     event.schema.json#/required
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (15) match fails for invalid config -> Generic event with missing number: Generic event with missing number 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_99
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  must have required property 'number'
    Path:     event.schema.json#/required
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;

exports[`event schema (16) match fails for invalid config -> Event with unknown category: Event with unknown category 1`] = `
"expect(received).toMatchSchema(schema)

received
  /category must be equal to constant
    Expected: <string> CAT_STATUS_1
    Received: <string> CAT_GENERIC_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_SYSLOG_0
    Received: <string> CAT_GENERIC_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_NE107_2
    Received: <string> CAT_GENERIC_0
    Path:     event.schema.json#/properties/category/const
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"foo\\":\\"bar\\"}
    Path:     event.schema.json#/properties/details/additionalProperties
  /category must be equal to constant
    Expected: <string> CAT_GENERIC_99
    Received: <string> CAT_GENERIC_0
    Path:     event.schema.json#/properties/category/const
  must match exactly one schema in oneOf
    Expected: [{\\"$ref\\":\\"#/definitions/statusEvent\\"},{\\"$ref\\":\\"#/definitions/syslogEvent\\"},{\\"$ref\\":\\"#/definitions/ne107Event\\"},{\\"$ref\\":\\"#/definitions/genericEvent\\"}]
    Path:     event.schema.json#/oneOf
"
`;
